--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
           python-version: '3.10'
       - name: Install Dependencies
         run: |
-          python -m install pip --upgrade pip
+          python -m pip install --upgrade pip
           pip install pyyaml
       - name: Run Feed Generator
         run: python feed.py
